Fix label text wrap

--- a/src/components/Label/Label.scss
+++ b/src/components/Label/Label.scss
@@ -1,6 +1,7 @@
 .inf-label {
   display: inline-flex;
   align-items: center;
+  flex-shrink: 0;
   width: max-content;
   border-radius: var(--inf-border-radius-medium);
   color: var(--inf-color-text-on-color);
